--- a/src/style/pages/_moviepage.scss
+++ b/src/style/pages/_moviepage.scss
@@ -16,6 +16,7 @@
   position: relative;
   width: 100%;
   height: 80vh;
+  overflow: hidden;
   img {
     object-fit: cover;
     object-position: center;
@@ -48,7 +49,7 @@
       }
     }
     ul {
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
       li {
         color: $color-1;
         font-size: 1.4rem;
